--- a/IoT-dashboard/api/package.json
+++ b/IoT-dashboard/api/package.json
@@ -3,15 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/socket.io": "^3.0.1",
     "body-parser": "1.20.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "ejs": "3.1.8",
-    "express": "4.18.2",
+    "express": "^4.18.2",
     "graphql": "16.6.0",
     "graphql-request": "5.0.0",
     "joi": "17.12.2",
     "mongoose": "^8.2.0",
-    "morgan": "1.10.0"
+    "morgan": "1.10.0",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
