--- a/api/package.json
+++ b/api/package.json
@@ -4,23 +4,25 @@
   "private": true,
   "dependencies": {
     "body-parser": "1.20.1",
-    "express": "4.18.2",
+    "dotenv": "^16.5.0",
     "ejs": "3.1.8",
+    "express": "4.18.2",
+    "joi": "17.12.2",
     "mongoose": "8.2.1",
-    "morgan": "1.10.0",
-    "joi": "17.12.2"
+    "morgan": "1.10.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
-    "@types/node": "^14.18.33",
     "@types/morgan": "1.9.3",
+    "@types/node": "^14.18.33",
     "node-gyp": "^6.1.0",
-    "ts-node": "10.9.1",
+    "nodemon": "^3.1.0",
+    "ts-node": "^10.9.1",
     "typescript": "4.9.3"
   },
   "scripts": {
- "dev": "ts-node ./lib/index.ts",
- "build": "tsc"
+    "dev": "ts-node ./lib/index.ts",
+    "watch": "nodemon",
+    "build": "tsc"
   }
 }
-  
