--- a/IoT-dashboard/api/package.json
+++ b/IoT-dashboard/api/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "body-parser": "1.20.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "ejs": "3.1.8",
     "express": "4.18.2",
@@ -16,6 +17,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.18",
     "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/morgan": "1.9.3",
