--- a/IoT/package.json
+++ b/IoT/package.json
@@ -15,9 +15,11 @@
     "@mui/icons-material": "^5.15.12",
     "@mui/material": "^5.17.1",
     "@mui/x-charts": "^6.19.8",
-    "react": "^18.2.0",
+    "axios": "^1.9.0",
+    "react": "^18.3.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "6.22.3",
+    "react-jwt": "^1.3.0",
+    "react-router-dom": "^6.22.3",
     "reactstrap": "^9.2.3"
   },
   "devDependencies": {
